--- a/runtime/tools/graphexplorer/graphexplorer.css
+++ b/runtime/tools/graphexplorer/graphexplorer.css
@@ -14,6 +14,8 @@ BSD-style license that can be found in the LICENSE file.
 .headerRow {
     font-weight: bold;
     background-color: #BBBBBB;
+    display: flex;
+    flex-direction: row;
 }
 
 .nameCell {
